<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.AuthHintActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="189dp"
        android:layout_height="147dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="108dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/quickcartlogo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/amarante"
        android:text="@string/let_s_you_in"
        android:textColor="@color/textColorSecond"
        android:textSize="32sp" />

    <LinearLayout
        android:id="@+id/continueWithFacebook"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/white_btn_bg"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/facebook"
            android:src="@drawable/facebook" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/continue_with_facebook"
            android:textColor="@color/textColorFirst"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/continueWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/white_btn_bg"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/google" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/continue_with_google"
            android:textColor="@color/textColorSecond"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/ytf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/nunito_sans_light"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/or"
            android:textColor="@color/textColorSecond" />

        <View
            android:id="@+id/divider2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />
    </LinearLayout>

    <Button
        android:id="@+id/loginWithPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/login_with_password" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="107dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/textColorFirst"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/SignUp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="98dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/sign_up"
            android:textColor="@color/green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView8" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>