<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.SignUpActivity">
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/create_your_naccount"
        android:textColor="@color/textColorFirst"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="no"
        android:background="@drawable/input_field_bg"
        android:drawableStart="@drawable/write"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/inria_sans"
        android:hint="@string/first_name"
        android:inputType="text"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="no"
        android:background="@drawable/input_field_bg"
        android:drawableStart="@drawable/write"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/inria_sans"
        android:hint="@string/last_name"
        android:inputType="text"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/input_field_bg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/countrycode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inria_sans"
            android:paddingStart="10dp"
            android:text="@string/_91"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/mobilenumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:autofillHints="no"
            android:background="@drawable/input_field_bg"
            android:ems="10"
            android:fontFamily="@font/inria_sans"
            android:hint="@string/mobile_number"
            android:inputType="phone" />
    </LinearLayout>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="no"
        android:background="@drawable/input_field_bg"
        android:drawableStart="@drawable/email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/inria_sans"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="no"
        android:background="@drawable/input_field_bg"
        android:drawableStart="@drawable/password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/inria_sans"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:text="@string/remember_me"
        android:textColor="#212121" />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/sign_up" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center"

        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/ytf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/inter"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/or_continue_with"
            android:textColor="#717171"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="@drawable/white_btn_bg"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/googleAuth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                app:srcCompat="@drawable/google" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="@drawable/white_btn_bg"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/facebookAuth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                app:srcCompat="@drawable/facebook" />
        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="107dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/already_have_an_account"
            android:textColor="@color/textColorFirst"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/logInGoto"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/logInGoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="98dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/log_in"
            android:textColor="@color/green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView8" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>