<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.LoginActivity">


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/login_to_your_naccount"
        android:textColor="@color/textColorFirst"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/input_field_bg"
        android:drawableStart="@drawable/email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/inria_sans"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:autofillHints="no"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/input_field_bg"
        android:drawableStart="@drawable/password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/inria_sans"
        android:hint="@string/password"
        android:inputType="none"
        android:paddingStart="10dp"
        android:autofillHints="no"
        tools:ignore="RtlSymmetry,TextFields" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter"
        android:text="@string/remember_me" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/inter"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/forgot_the_password"
        android:textColor="#282828" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center"

        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/ytf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/inter"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/or_continue_with"
            android:textColor="#717171"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="@drawable/white_btn_bg"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/googleAuth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/google" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="@drawable/white_btn_bg"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/facebookAuth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/facebook" />
        </LinearLayout>

    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="107dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/textColorFirst"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/signUp"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="98dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/sign_up"
            android:textColor="@color/green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView8" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>